css/crocodiles.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-size:100%;
    line-height: lem;
}
/*default style for entire page*/
body {
    color:#101010;
    border-color: #101010;
    background-color: #eaeaea;
}
/*content container*/
.container {
    max-width: 1020px;
    margin: 0 auto 0 auto;
}
/*Adding google fonts*/

@import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Cinzel+Decorative&family=Ledger&display=swap');

/*Default Headings styles*/
h1,h2,h3,h4,h5,h6 {
    font-family: 'Cinzel', serif;
    line-height: 1.1;
    font-weight: 700;
}
/*Adding specific styles*/
h1 {
    font-size: 4.25rem;
    margin-bottom: 2rem;
}

h2 {
    font-size: 2.25rem;
    margin-bottom: .5rem;

}

h3 {
    font-size: 2rem;
    margin-bottom: 0.5rem;

}

h4 {
    font-size: 1.75;
    margin-bottom: 0.5rem;

}

/*paragraphs*/
p {
    font-family: 'Ledger', serif;
    font-weight: 400;
    line-height: 1.5;
    font-size: 1.125rem;
    margin-bottom: 1.5rem;
    padding-left: 24rem;
    padding-right: 24rem;
    font-style: normal;
}

/*List format*/
ul {
    list-style: disc outside;
    margin-bottom: 1.5rem;
    margin-left: 1.25rem;
    }
    ul li {
    font-family: "Ledger", serif;
    font-weight: 500;
    font-size: 16px;
    color: #eaeaea;
    text-decoration: none;
    }
/* hyperlinks */
a {
    font-family:inherit;
    font-size:inherit;
    line-height: inherit;
    color: #232C25;
    }
 
/*footer*/
footer {
    background-color: #232C25;
    text-align: left;
    font-size: 1rem;
    color: #eaeaea;
    padding: 1rem 0 1rem 0;
    margin-top:2rem;
    border-top:1px solid #101010;
    }

/*Main*/
main{
    margin-bottom: 2.5rem;
    }

/* images*/
img {
    max-width: 1020px;
    width: 100%;
    height:auto;
    border:1px solid #101010;
    }
/*colour blocking*/
.lummorn{
    padding:3rem 0 3rem 0;
    background-color: #8C371E	;
    margin-bottom: 2.5rem;
    color: #eaeaea;
}
.market{
    padding:3rem 0 3rem 0;
    background-color: #eaeaea	;
    margin-bottom: 2.5rem;
    color: #232C25;
}
.street{
    padding:3rem 0 3rem 0;
    background-color: #FCD345	;
    margin-bottom: 2.5rem;
    color: #232C25;
}
.about{
    padding:3rem 0 3rem 0;
    background-color: #eaeaea	;
    margin-bottom: 2.5rem;
    color: #232C25;
}
/*Header*/

